some enhancements